# study_lvgl

./: README.md
lv_port_pc_vscode/: CMakeLists.txt
lv_port_pc_vscode/lv_drivers/indev/: evdev.c
